--- a/index.css
+++ b/index.css
@@ -29,13 +29,19 @@ body {
 .navigation div {
     background: black;
     opacity: 0.7;
-    border: solid;
-    border-width: 10px;
     border-bottom-width: 0px;
     border-top-right-radius: 5px;
     border-top-left-radius: 5px;
-    padding: 5px;
+    padding-top: 10px;
+    padding-bottom: 7px;
+    padding-left: 15px;
+    padding-right: 15px;
     float: left;
+}
+
+.navigation div:hover {
+    background-image: linear-gradient(white, black);
+    border-color: linear-gradient(white, black);
 }
 
 .navigation div a {
