Prototype of wasm website

--- a/contact.css
+++ b/contact.css
@@ -1,7 +1,3 @@
-.links ul li {
-    text-align: center
-}
-
-.contact-info {
-    font-family: 'Special Elite', cursive;
+.contact-type p {
+    font-family: 'IM Fell DW Pica SC', serif;
 }
