--- a/template.css
+++ b/template.css
@@ -50,6 +50,7 @@ body {
 
 .navigation div {
     font-family: 'Special Elite', cursive;
+    color: white;
     background: black;
     opacity: 0.7;
     border-bottom-width: 0px;
@@ -63,13 +64,9 @@ body {
 }
 
 .navigation div:hover {
+    cursor: pointer;
     background-image: linear-gradient(white, black);
     border-color: linear-gradient(white, black);
-}
-
-.navigation div a {
-    text-decoration: none;
-    color: white;
 }
 
 a {
